--- a/Proposal-FINAL.html
+++ b/Proposal-FINAL.html
@@ -13361,7 +13361,6 @@ The following object is masked from ‘package:dplyr’:
 <div class="output_area">
 
     <div class="prompt"></div>
-
 </div>
 
 <div class="output_area">
@@ -17389,26 +17388,13 @@ height=420
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>From this analysis, we expect to find that certain attributes will be more positively correlated with successful match outcomes. For example, an increase in player height may correlate with the number of aces a player gets in a match, which may in turn result in greater player success.</p>
+<p>We expect to find that certain attributes will be more positively correlated with successful match outcomes. For example, an increase in player height may correlate with the number of aces a player gets in a match, which may in turn result in greater player success.</p>
 <p>In general we expect to find that some attributes contribute to success and others may do the opposite. These findings could help in the scouting of new tennis player talent for sponsorships by corporations that sell tennis gear.</p>
 <p>For example, if a new player enters the scene with a plethora of attributes that contribute positively to a players success, a corporation may wish to engage in early sponsorship, sponsoring them at a lower rate and receiving greater value out of their sponsorship spending rather than spending sponsorship dollars on proven successful players that request higher fees.</p>
 <p>Future questions that this analysis could lead to is an examination as to why certian attributes contribute to success. For example if there is an ideal range of height for a pro player, why are the heights within that range ideal?</p>
 
 </div>
 </div>
-</div>
-<div class="cell border-box-sizing code_cell rendered">
-<div class="input">
-<div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
-<div class="inner_cell">
-    <div class="input_area">
-<div class=" highlight hl-r"><pre><span></span>
-</pre></div>
-
-    </div>
-</div>
-</div>
-
 </div>
     </div>
   </div>
