--- a/Proposal (1).html
+++ b/Proposal (1).html
@@ -17382,9 +17382,29 @@ height=420
 <p>In general we expect to find that some attributes contribute to success and others may do the opposite. These findings could help in the scouting of new tennis player talent for sponsorships by corporations that sell tennis gear.</p>
 <p>For example, if a new player enters the scene with a plethora of attributes that contribute positively to a players success, a corporation may wish to engage in early sponsorship, sponsoring them at a lower rate and receiving greater value out of their sponsorship spending rather than spending sponsorship dollars on proven successful players that request higher fees.</p>
 <p>Future questions that this analysis could lead to is an examination as to why certian attributes contribute to success. For example if there is an ideal range of height for a pro player, why are the heights within that range ideal?</p>
+<p>Proposal by:</p>
+<ul>
+<li>Item Jerry Hall</li>
+<li>Item Nic Tavares</li>
+<li>Item Jennifer Zhang</li>
+<li>Item Huy Pham</li>
+</ul>
 
 </div>
 </div>
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-r"><pre><span></span>
+</pre></div>
+
+    </div>
+</div>
+</div>
+
 </div>
     </div>
   </div>
