--- a/Proposal (2).html
+++ b/Proposal (2).html
@@ -17384,10 +17384,10 @@ height=420
 <p>Future questions that this analysis could lead to is an examination as to why certian attributes contribute to success. For example if there is an ideal range of height for a pro player, why are the heights within that range ideal?</p>
 <p>Proposal by:</p>
 <ul>
-<li>Item Jerry Hall</li>
-<li>Item Nic Tavares</li>
-<li>Item Jennifer Zhang</li>
-<li>Item Huy Pham</li>
+<li>Jerry Hall</li>
+<li>Nic Tavares</li>
+<li>Jennifer Zhang</li>
+<li>Huy Pham</li>
 </ul>
 
 </div>
